<resources>
    <string formatted="false" name="about_">About</string>
    <string formatted="false" name="about_hint">About this app</string>
    <string formatted="false" name="faq_hint">Some tips and tricks, how to set up this app.</string>
    <string formatted="false" name="feedback_">Feedback</string>
    <string formatted="false" name="feedback_hint">Report bugs, request features ...</string>
    <string formatted="false" name="google_plus_hint">Follow me on Google+.\nGet update notifications etc.</string>
    <string formatted="false" name="about0">SMSdroid lets you read your sms and write sms with any other app.</string>
    <string formatted="false" name="more_apps_">More Apps..</string>
    <string formatted="false" name="settings">Preferences</string>
    <string formatted="false" name="new_message_">New message</string>
    <string formatted="false" name="new_message">1 unread message.</string>
    <string formatted="false" name="new_messages_">New messages</string>
    <string formatted="false" name="new_messages">%d unread messages.</string>
    <string formatted="false" name="call">Call</string>
    <string formatted="false" name="reply">Reply</string>
    <string formatted="false" name="send_">Send</string>
    <string formatted="false" name="notification_">Notifications</string>
    <string formatted="false" name="notification_enable_">Enable notifications</string>
    <string formatted="false" name="notification_enable_hint">Enable notifications on receive</string>
    <string formatted="false" name="receive_vibrate_">Vibrate</string>
    <string formatted="false" name="receive_vibrate_hint">Vibrate on receive</string>
    <string formatted="false" name="receive_vibrate_mode_">Vibrator mode</string>
    <string formatted="false" name="receive_sound_">Sound</string>
    <string formatted="false" name="receive_sound_hint">Sound on receive</string>
    <string formatted="false" name="receive_led_color_">LED color</string>
    <string formatted="false" name="receive_led_flash_">LED mode</string>
    <string formatted="false" name="receive_led_flash_hint">Set LED flashing behaviour</string>
    <string formatted="false" name="receive_no_text_">Hide sender/text</string>
    <string formatted="false" name="receive_no_text_hint">Hide sender/text in notification.</string>
    <string formatted="false" name="behavior_">Behavior</string>
    <string formatted="false" name="autosend_">Autosend</string>
    <string formatted="false" name="appearance_and_behavior_">Appearance &amp; behavior</string>
    <string formatted="false" name="autosend_hint">Send answers automatically. Currently only WebSMS supports this feature. Other apps will just show the text.</string>
    <string formatted="false" name="show_text_field_">Show text field</string>
    <string formatted="false" name="show_text_field_hint">Show text field instead of answer button.</string>
    <string formatted="false" name="show_target_app_">Show target app</string>
    <string formatted="false" name="show_target_app_hint">Show target App used for sending on \"send\" Button.</string>
    <string formatted="false" name="appearance_">Appearance</string>
    <string formatted="false" name="theme_">Theme</string>
    <string formatted="false" name="textsize_">Text size</string>
    <string formatted="false" name="textsize_hint">Text size in pixels; leave empty for default</string>
    <string formatted="false" name="textcolor_">Text color</string>
    <string formatted="false" name="textcolor_hint">Message text\'s color.</string>
    <string formatted="false" name="textcolor_ignore_conv_">Ignore text color for threads</string>
    <string formatted="false" name="textcolor_ignore_conv_hint">Ignore text color in list of threads.</string>
    <string formatted="false" name="show_contact_photo_">Show photo</string>
    <string formatted="false" name="show_contact_photo_hint">Show contact\'s photo in conversation list</string>
    <string formatted="false" name="show_emoticons_">Show emoticons</string>
    <string formatted="false" name="show_emoticons_hint">Show emoticons in message list.</string>
    <string formatted="false" name="hide_send_">Hide "send" button</string>
    <string formatted="false" name="hide_send_hint">Hide "send" button near text field.</string>
    <string formatted="false" name="hide_restore_">Hide "restore last message" button</string>
    <string formatted="false" name="hide_restore_hint">Hide "restore last message" button in message list.</string>
    <string formatted="false" name="hide_paste_">Hide "paste" button</string>
    <string formatted="false" name="hide_paste_hint">Hide "paste" button on text field.</string>
    <string formatted="false" name="hide_widget_label_">Hide widget\'s label</string>
    <string formatted="false" name="hide_widget_label_hint">Hide the label of the widget.</string>
    <string formatted="false" name="hide_delete_all_threads_">Hide delete all threads</string>
    <string formatted="false" name="hide_delete_all_threads_hint">Hide delete all threads menu option.</string>
    <string formatted="false" name="hide_message_count_">Hide message counts</string>
    <string formatted="false" name="hide_message_count_hint">Hide message counts on conversation list.</string>
    <string formatted="false" name="show_full_date_">Show full date</string>
    <string formatted="false" name="show_full_date_hint">Show full date and time on every message.</string>
    <string formatted="false" name="me">Me</string>
    <string formatted="false" name="view_contact_">View contact</string>
    <string formatted="false" name="add_contact_">Add to contacts</string>
    <string formatted="false" name="view_thread_">View thread</string>
    <string formatted="false" name="filter_spam_">Mark as Spam</string>
    <string formatted="false" name="dont_filter_spam_">Remove from Blacklist</string>
    <string formatted="false" name="delete_message_">Delete message</string>
    <string formatted="false" name="delete_thread_">Delete thread</string>
    <string formatted="false" name="forward_">Forward</string>
    <string formatted="false" name="send_draft_">Send draft</string>
    <string formatted="false" name="copy_text_">Copy message text</string>
    <string formatted="false" name="view_details_">View message details</string>
    <string formatted="false" name="delete_threads_">Delete all threads</string>
    <string formatted="false" name="mark_all_read_">Mark all as read</string>
    <string formatted="false" name="mark_read_">Mark read</string>
    <string formatted="false" name="mark_unread_">Mark unread</string>
    <string formatted="false" name="message_options_">Message options</string>
    <string formatted="false" name="delete_message_question">Do you really want to delete this message?</string>
    <string formatted="false" name="delete_thread_question">Do you really want to delete <b>all messages of this thread</b>?</string>
    <string formatted="false" name="delete_threads_question">Do you really want to delete <b>all messages</b>?</string>
    <string formatted="false" name="from_">From:</string>
    <string formatted="false" name="to_">To:</string>
    <string formatted="false" name="to_hint">Name or Number</string>
    <string formatted="false" name="type_">Type:</string>
    <string formatted="false" name="sent_">Sent:</string>
    <string formatted="false" name="received_">Received:</string>
    <string formatted="false" name="view_mms">View MMS</string>
    <string formatted="false" name="mms_conversation">&lt;MMS body&gt;</string>
    <string formatted="false" name="import_contact_">Import contact</string>
    <string formatted="false" name="download_">Download</string>
    <string formatted="false" name="downloading_">Downloading..</string>
    <string formatted="false" name="error_conv_null">Error getting conversation from DB!</string>
    <string formatted="false" name="error_sending_failed">Sending failed</string>
    <string formatted="false" name="text_hint">Text</string>
    <string formatted="false" name="paste_">[Paste from clipboard]</string>
    <string formatted="false" name="restore_">Restore last message</string>
    <string formatted="false" name="attachment_saved">Saved attachment on SD card as:</string>
    <string formatted="false" name="attachment_not_saved">Could not save attachment.</string>
    <string formatted="false" name="chooser_">Chooser</string>
    <string formatted="false" name="notification_icon_">Notification icon</string>
    <string formatted="false" name="notification_default_">Default</string>
    <string formatted="false" name="notification_gingerbread_">Gingerbread</string>
    <string formatted="false" name="notification_gingerbread_mail_">Gingerbread mail</string>
    <string formatted="false" name="notification_black_">Black</string>
    <string formatted="false" name="notification_green_">Green</string>
    <string formatted="false" name="notification_yellow_">Yellow</string>
    <string formatted="false" name="bubbles_in_">Bubbles in</string>
    <string formatted="false" name="bubbles_in_hint">Bubbles for incoming messages</string>
    <string formatted="false" name="bubbles_out_">Bubbles out</string>
    <string formatted="false" name="bubbles_out_hint">Bubbles for outgoing messages</string>
    <string formatted="false" name="bubbles_nothing">Nothing</string>
    <string formatted="false" name="bubbles_plain_dark_gray">Plain dark gray</string>
    <string formatted="false" name="bubbles_plain_light_gray">Plain light gray</string>
    <string formatted="false" name="bubbles_old_turquoise_left">Old turquoise left</string>
    <string formatted="false" name="decode_decimal_ncr_">Decode Decimal NCR</string>
    <string formatted="false" name="decode_decimal_ncr_hint">Some providers deliver unicode messages encoded as decimal NCR (&amp;#0000;). Check to auto decode such entities.</string>
    <string formatted="false" name="activate_sender_">Activate sender</string>
    <string formatted="false" name="activate_sender_hint">Activate SMSdroid\'s message sender.</string>
    <string formatted="false" name="fix_numbers_">Fix numbers</string>
    <string formatted="false" name="fix_numbers_hint">Replace parts of a number with a regular expression before sending. Most users don\'t need to change this.</string>
    <string formatted="false" name="fix_number1_regex_">Regex 1</string>
    <string formatted="false" name="fix_number1_replace_">Replace 1</string>
    <string formatted="false" name="fix_number2_regex_">Regex 2</string>
    <string formatted="false" name="fix_number2_replace_">Replace 2</string>
    <string formatted="false" name="fix_number3_regex_">Regex 3</string>
    <string formatted="false" name="fix_number3_replace_">Replace 3</string>
    <string formatted="false" name="fix_numbers_regex_hint">Regular expression to search for.</string>
    <string formatted="false" name="fix_numbers_replace_hint">Replace matched text with this text.</string>
    <string formatted="false" name="use_new_layout_">Use tiled layout</string>
    <string formatted="false" name="use_new_layout_hint">Use a tiled user interface for conversations</string>
    <string formatted="false" name="mobile_only_">Only mobile numbers</string>
    <string formatted="false" name="mobile_only_hint">Only suggest mobile numbers for recipient</string>
    <string formatted="false" name="edit_short_text_">Edit as short message</string>
    <string formatted="false" name="edit_short_text_hint">Consider input a short message. The keyboard usually replaces enter with smiley button if enabled.</string>
    <string formatted="false" name="forwarded_sms_clean_">Modify received sms</string>
    <string formatted="false" name="forwarded_sms_clean_hint">Strips sender in received sms according to "([0-9a-zA-Z]+):" and use that this number as sender.</string>
    <string formatted="false" name="donate_remove_ads_">Donate/remove ads</string>
</resources>