<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2009-2012 Felix Bechstein
-->
<!--
    This file is part of SMSdroid. This program is free software; you can
    redistribute it and/or modify it under the terms of the GNU General
    Public License as published by the Free Software Foundation; either
    version 3 of the License, or (at your option) any later version.
-->
<!--
    This program is distributed in the hope that it will be useful, but
    WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
    General Public License for more details. You should have received a
    copy of the GNU General Public License along with this program; If
    not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:key="enable_autosend"
                        android:defaultValue="true" android:title="@string/autosend_"
                        android:summary="@string/autosend_hint"
                        android:disableDependentsState="true"/>
    <CheckBoxPreference android:key="show_textfield"
                        android:defaultValue="true" android:title="@string/show_text_field_"
                        android:summary="@string/show_text_field_hint"
                        android:dependency="enable_autosend"/>
    <CheckBoxPreference android:key="show_target_app"
                        android:defaultValue="true" android:title="@string/show_target_app_"
                        android:summary="@string/show_target_app_hint"/>
    <CheckBoxPreference android:key="decode_decimal_ncr"
                        android:defaultValue="true" android:title="@string/decode_decimal_ncr_"
                        android:summary="@string/decode_decimal_ncr_hint"/>
    <CheckBoxPreference android:key="activate_sender"
                        android:defaultValue="true" android:title="@string/activate_sender_"
                        android:summary="@string/activate_sender_hint"/>
    <CheckBoxPreference android:key="mobile_only"
                        android:title="@string/mobile_only_"
                        android:summary="@string/mobile_only_hint"
                        android:defaultValue="false"/>
    <CheckBoxPreference android:key="edit_short_text"
                        android:defaultValue="true"
                        android:title="@string/edit_short_text_"
                        android:summary="@string/edit_short_text_hint"/>
    <CheckBoxPreference android:key="forwarded_sms_clean"
                        android:title="@string/forwarded_sms_clean_"
                        android:summary="@string/forwarded_sms_clean_hint"
                        android:defaultValue="false"/>

    <PreferenceScreen android:title="@string/fix_numbers_"
                      android:summary="@string/fix_numbers_hint">
        <PreferenceCategory android:title="@string/fix_number1_regex_">
            <EditTextPreference android:key="regex1"
                                android:title="@string/fix_number1_regex_"
                                android:summary="@string/fix_numbers_regex_hint"/>
            <EditTextPreference android:key="replace1"
                                android:title="@string/fix_number1_replace_"
                                android:summary="@string/fix_numbers_replace_hint"/>
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/fix_number2_regex_">
            <EditTextPreference android:key="regex2"
                                android:title="@string/fix_number2_regex_"
                                android:summary="@string/fix_numbers_regex_hint"/>
            <EditTextPreference android:key="replace2"
                                android:title="@string/fix_number2_replace_"
                                android:summary="@string/fix_numbers_replace_hint"/>
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/fix_number3_regex_">
            <EditTextPreference android:key="regex3"
                                android:title="@string/fix_number3_regex_"
                                android:summary="@string/fix_numbers_regex_hint"/>
            <EditTextPreference android:key="replace3"
                                android:title="@string/fix_number3_replace_"
                                android:summary="@string/fix_numbers_replace_hint"/>
        </PreferenceCategory>
    </PreferenceScreen>
</PreferenceScreen>
