<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2009-2012 Felix Bechstein
-->
<!--
    This file is part of SMSdroid. This program is free software; you can
    redistribute it and/or modify it under the terms of the GNU General
    Public License as published by the Free Software Foundation; either
    version 3 of the License, or (at your option) any later version.
-->
<!--
    This program is distributed in the hope that it will be useful, but
    WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
    General Public License for more details. You should have received a
    copy of the GNU General Public License along with this program; If
    not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/about_">
        <PreferenceScreen android:title="@string/about_"
                          android:summary="@string/about_hint">
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="de.ub0r.android.smsdroid"
                    android:targetClass="de.ub0r.android.smsdroid.AboutActivity"/>
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/faq_"
                          android:summary="@string/faq_hint">
            <intent android:action="android.intent.action.VIEW"
                    android:data="http://code.google.com/p/websmsdroid/wiki/FAQ"/>
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/feedback_"
                          android:summary="@string/feedback_hint">
            <intent android:action="android.intent.action.VIEW"
                    android:data="http://code.google.com/p/websmsdroid/issues/list"/>
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/google_plus_"
                          android:summary="@string/google_plus_hint">
            <intent android:action="android.intent.action.VIEW"
                    android:data="https://plus.google.com/101490294894990964252"/>
        </PreferenceScreen>
        <PreferenceScreen android:key="more_apps"
                          android:title="@string/more_apps_"/>
    </PreferenceCategory>
</PreferenceScreen>
