<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009-2012 Felix Bechstein -->
<!--
		This file is part of SMSdroid. This program is free software; you can
		redistribute it and/or modify it under the terms of the GNU General
		Public License as published by the Free Software Foundation; either
		version 3 of the License, or (at your option) any later version.
-->
<!--
		This program is distributed in the hope that it will be useful, but
		WITHOUT ANY WARRANTY; without even the implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details. You should have received a
		copy of the GNU General Public License along with this program; If
		not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/item_compose"
            android:icon="@drawable/ic_menu_compose"
            android:showAsAction="always|never"
            android:title="@string/new_message_"/>
    <item
            android:id="@+id/item_mark_all_read"
            android:icon="@drawable/ic_menu_mark"
            android:showAsAction="ifRoom|never"
            android:title="@string/mark_all_read_"/>
    <item
            android:id="@+id/item_delete_all_threads"
            android:icon="@android:drawable/ic_menu_delete"
            android:title="@string/delete_threads_"/>
    <item
            android:id="@+id/item_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/settings"/>
    <item
            android:id="@+id/item_donate"
            android:icon="@drawable/ic_menu_star"
            android:title="@string/donate_remove_ads_"/>

</menu>